Fixes box2box spacings
SRFCMSAL-242

--- a/source/_patterns/20-molecules/swipe-module/swipe-module.scss
+++ b/source/_patterns/20-molecules/swipe-module/swipe-module.scss
@@ -19,12 +19,7 @@ $item-max-width: 400px;
 
 .swipemod {
   background: $color-bg-box;
-  padding: 24px 0 32px;
   overflow-x: hidden;
-
-  @include tablet-up {
-    padding: 24px 0 40px;
-  }
 
   @include desktop-up {
     overflow-x: visible;
